# my_6.824

./: .gitignore  README.md
MapReduce/: CMakeLists.txt  mr-out-0  mr-out-1  mr-out-2  mr-out-3  mr-out-4  mr-out-5  mr-out-6  mr-out-7  mrcoordinator.cpp  mrworker.cpp
MapReduce/mr/: CMakeLists.txt  coordinator.cpp  worker.cpp
MapReduce/mr/include/: config.h  coordinator.h  worker.h
MapReduce/mr/protos/: coordinator.proto  worker.proto
MapReduce/mrapps/: wc.cpp
kvraft/: CMakeLists.txt  client_test.cpp  server.cpp  server_test.cpp
kvraft/include/: client.hpp  kvsrvrpc.h  msg.hpp  server.hpp  tools.hpp
kvraft/include/protos/: kvsrv.proto
kvraft/raft/: CMakeLists.txt  Node0_log.txt  Node1_log.txt  Node3_log.txt  Node4_log.txt  Snapshot_Node0.txt  Snapshot_Node2.txt  Snapshot_Node3.txt  Snapshot_Node4.txt  client_test.cpp  raft.cpp  server.txt  server_test.cpp
kvraft/raft/include/: msg.h  raft.h  rpc.h  statemachine.h
raft/: CMakeLists.txt  Node0_log.txt  Node1_log.txt  Node2_log.txt  Node3_log.txt  Node4_log.txt  Snapshot_Node0.txt  Snapshot_Node1.txt  Snapshot_Node2.txt  Snapshot_Node3.txt  Snapshot_Node4.txt  raft.cpp  server.txt  server_test.cpp
raft/include/: apply.h  msg.h  raft.h  rpc.h  statemachine.h  timer.h
raft/include/protos/: raftrpc.proto
